2010-05-21  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpChannelListener.cs : do not accept more than one channel at a
	  time. Remove extra fields. Add CancelAsync() implementation.

2010-05-21  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : add a workaround for Func<>.BeginInvoke()
	  problem that blocked ASP.NET channels working.

2010-05-19  Andreia Gaita  <avidigal@novell.com>

	* HttpRequestChannel.cs: if the response has no body, create an
	  empty message and return that.
	  Note: the ws-mc protocol defines that the service returns an
	  200 response with an empty body on first connection, this
	  adds support for that (fixes part of #599667)

2010-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* DuplexChannelBase.cs
	  ReplyChannelBase.cs
	  TcpChannelListener.cs
	  ChannelListenerBase_1.cs
	  PeerChannelListener.cs
	  HttpChannelListener.cs
	  NamedPipeChannelListener.cs:
	  do the same for channel listener,reply channels and
	  duplex channels.

2010-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelFactoryBase.cs, RequestChannelBase.cs : support
	  MessageVersion in GetProperty<T>() for many transport channels.

2010-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpChannelFactory.cs
	  TcpChannelFactory.cs
	  ChannelFactoryBase.cs
	  NamedPipeChannelFactory.cs
	  PeerChannelFactory.cs
	  RequestChannelBase.cs : commonize MessageEncoder.
	  (Commented out GetPrpoerty<T>() for MessageVersion as it is 
	  in doubt yet.)

2010-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeaders.cs : do not pass empty string array; it almost
	  always results in header-not-found error.

2010-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeader.cs : do not try to lookup prefix for empty ns.

2010-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageImpl.cs : do not use maxBufferSize for initialSize argument
	  for MessageHeaders. Fix OutOfMemoryException for certain usage.
